--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://connect.qq.com/widget/shareqq/index.html?url=[YOUR_URL]&title=广州法院判决离谱！业主维权无门！" target="_blank">分享到QQ</a>
     </div>
 
-    <h1>广州天河法院判决离谱至极？<br>棠德花苑业主维权无门，老旧楼加装电梯乱象无人管！</h1>
+    <h1>现代版葫芦僧断案。。。。荒唐、无耻、奇葩。。。。广州天河法院判决离谱至极？<br>棠德花苑业主维权无门，老旧楼加装电梯乱象无人管！</h1>
     
     <div class="judgment">
         <h2>判决书关键内容（2024）粤0106民初28919号</h2>
