--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
             // 【【【最重要的一步】】】
             // 请将下面的长字符串替换成你刚刚从 Vercel 获取的 Server URL
             serverURL: 'https://walinevc.vercel.app',
-            
+           // --- 请在这里添加下面这一行 ---
+        imageUploader: false, // 这会禁用图片上传功能
+        // --------------------------------
+ 
             // 允许游客评论，并让昵称为必填项
             lang: 'zh-CN',
             meta: ['nick', 'mail'],
