--- a/index.html
+++ b/index.html
@@ -183,13 +183,12 @@
         /* 适配Waline的深色模式 */
         #waline {
             --waline-bg-color: #2a2a2a;
-            --waline-text-color: #e0e0e0;
+            --waline-text-color: #ffffff !important;
             --waline-border-color: #424242;
             --waline-badge-color: var(--accent-color-blue);
             --waline-theme-color: var(--accent-color-blue);
             --waline-info-bg-color: #333;
-                /* --- 在这里添加下面这一行，强制文字为纯白色 --- */
-            color: #ffffff;
+
         }
         
         /* --- 页脚 --- */
