--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
         
         /* --- 响应式设计 --- */
         @media (max-width: 600px) { body { padding: 5px; } .container { padding: 15px; } h1 { font-size: 1.8em; } h2 { font-size: 1.4em; } }
+
+        /* --- [最终修正] 强制评论文字变白 --- */
+#waline .wl-content p {
+    color: #ffffff !important;
+}
+        
     </style>
 </head>
 <body>
