--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
         <div class="share-section">
             <h2>我维权20多年，已看尽广州政府嘴脸，<br>维权过程中的各种打击报复，家庭因此分裂。<br>今天，我准备拿起舆论武器，揭露真相！！！</h2>
             <p>宪法赋予我们言论自由，业主的苦必须让全国知道！请立即转发！</p>
-            <p>也欢迎全国的各类维权奇葩事情在本页末尾评论留言，<br>这里发帖不需要实名，也不用害怕各种敏感词，更不会被删贴，。<br>
+            <p>也欢迎全国的各类维权奇葩事情在本页末尾评论留言</p>
+             <p>这里发帖不需要实名，也不用害怕各种敏感词，更不会被删贴</p>
 <strong><span class="highlight-text">民主</span>和<span class="highlight-text">自由</span></strong>，难得在这里体现了！！！</p>
             
             <div class="share-buttons">
