--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         :root {
             --primary-text-color: #e0e0e0;
             --secondary-text-color: #b0b0b0;
-            --background-color: #f4f4f5;
-            --container-background: #1e1e1e;
+            --background-color: #121212;
+            --container-background: #2a2a2a;
             --accent-color-red: #ff5252;
             --accent-color-blue: #64b5f6;
             --border-color: #424242;
