--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             font-size: 1em;
             font-weight: bold;
             padding: 10px;
-            background-color: #acacac;
+            background-color: #424242;
             border-radius: 8px;
         }
         .visitor-counter span {
@@ -104,7 +104,7 @@
         }
 
         li {
-            background: #acacac;
+            background: #424242;
             margin: 15px 0;
             padding: 20px;
             border-radius: 8px;
