--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             --waline-theme-color: var(--accent-color-blue);
             --waline-info-bg-color: #333;
   --waline-theme-color: #F56C6C; /* 设置高亮颜色为一个鲜明的珊瑚红 */
-  --waline-meta-color: #555;   /* 设置普通图标颜色为一个更清晰的深灰色，不再灰暗 */
+  --waline-meta-color: #9e9e9e;   /* 设置普通图标颜色为一个更清晰的深灰色，不再灰暗 */
         }
         
         /* --- 页脚 --- */
