--- a/index.html
+++ b/index.html
@@ -192,6 +192,41 @@
   --waline-theme-color: #F56C6C; /* 设置高亮颜色为一个鲜明的珊瑚红 */
   --waline-meta-color: #9e9e9e;   /* 设置普通图标颜色为一个更清晰的深灰色，不再灰暗 */
         }
+
+
+ /* --- [最终修正] 强制覆盖 Waline 图标和按钮颜色 --- */
+
+/* 1. 强制设定评论区“元信息”颜色（包括图标、时间、UA等） */
+#waline .wl-meta, 
+#waline .wl-meta a, 
+#waline .wl-meta svg {
+    color: #9e9e9e !important;
+}
+
+/* 2. 强制设定操作图标颜色（点赞、回复）*/
+#waline .wl-actions svg {
+    color: #9e9e9e !important;
+    fill: #9e9e9e !important; /* 针对SVG的填充色 */
+}
+
+/* 3. 强制“加载更多”按钮样式 */
+#waline .wl-load-more {
+    background-color: #424242 !important;
+    color: #e0e0e0 !important;
+    border: 1px solid #616161 !important;
+}
+
+/* 4. 强制设定按钮和图标在鼠标悬停时的颜色 */
+#waline .wl-meta a:hover,
+#waline .wl-actions svg:hover {
+    color: #ffffff !important;
+    fill: #ffffff !important;
+}
+
+#waline .wl-load-more:hover {
+    background-color: #555555 !important;
+    color: #ffffff !important;
+}
         
         /* --- 页脚 --- */
         footer {
