--- a/index.html
+++ b/index.html
@@ -312,6 +312,11 @@
             // 【【【最重要的一步】】】
             // 请将下面的长字符串替换成你刚刚从 Vercel 获取的 Server URL
             serverURL: 'https://walinevc.vercel.app',
+        // --- ↓↓↓ 请在这里添加这一行关键代码 ↓↓↓ ---
+        dark: true,
+        // --- ↑↑↑ 添加结束 ↑↑↑ ---
+
+            
             // --- 在这里添加下面这一行，禁用表情互动和地理位置 ---
         reaction: false,
            // --- 请在这里添加下面这一行 ---
