--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <div class="content-block">
             <h2>全国业主的共同呼声</h2>
             <p>加装电梯本是便民工程，但野蛮施工、司法不公让多少业主欲哭无泪？20年维权路，业主的苦谁懂？你也遇到类似问题？快分享你的故事，联合起来为公平发声！</p>
-            <a href="mailto:justice4owners@example.com" class="cta email">提交你的经历 (f8u8c8k8G8F8W@gmail.com)</a>
+            <a href="mailto:f8u8c8k8G8F8W@gmail.com" class="cta email">提交你的经历</a>
         </div>
         
         <div class="conclusion">
