--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <ul>
             <li><strong>法院逻辑自相矛盾，赔小不赔大？</strong><br>法院承认施工方毁了空调，赔了拆装费200元、清洗费200元（无发票也支持），却说1600元更换费“没换新不算损失”。同样没实际发生，为啥拆装清洗赔，空调不赔？这种荒唐逻辑居然发生在广州天河法院？</li>
             <li><strong>空调毁了3年不赔新机费？</strong><br>检测报告确认施工方乱来导致空调无法制冷，原告要1600元换新，法院却说“没发票+没换新不算损失”。广州3年高温（35°C+），无空调生活多苦？法院不让业主恢复正常生活？</li>
-            <li><strong>胜诉了还自掏诉讼费？</strong><br>施工方侵权成立，赔了511元，但113元诉讼费全让原告出。被告惹祸，受害人倒贴钱？这是保护谁的利益？再次证明司-法-黑-暗、奇葩、荒唐、无耻！！！！！</li>
+            <li><strong>胜诉了还自掏诉讼费？</strong><br>施工方侵权成立，赔了511元，但113元诉讼费全让原告出。被告惹祸，受害人倒贴钱？这是保护谁的利益？再次证明司法黑暗、奇葩、荒唐、无耻！！！！！</li>
             <li><strong>法官微信加被告律师？</strong><br>开庭当天，法官与被告律师加微信“传证据”，原告却得用法院平台/快递。程序公平在哪？谁看了不怀疑有私下交易？</li>
             <li><strong>15个月才判，拖延加重苦难？</strong><br>法律要求6-12个月结案，这案拖了15个月！3个夏天无空调，法院自己违-法-违-规且不解释延期原因，业主的苦谁管？</li>
             <li><strong>圈梁断一半，安全隐患被无视？</strong><br>楼房11根圈梁断6根，方案无加固细节，责任全推业主。政-府推电梯，法院护施工方，业主的房安全谁保障？</li>
@@ -362,7 +362,7 @@
         
         <div class="conclusion">
             <h2>业主维权为何如此艰难？</h2>
-            <p>空调坏了、房子不安全、打官司还倒贴钱，法院判决让人寒心。加装电梯本为民生，司-法疑似偏袒施工方，业主权益谁来护？请转发，让更多人关注公平正义！</p>
+            <p>空调坏了、房子不安全、打官司还倒贴钱，法院判决让人寒心。加装电梯本为民生，司法疑似偏袒施工方，业主权益谁来护？请转发，让更多人关注公平正义！</p>
             <p>（基于真实判决书及20年维权经历，仅供参考，欢迎理性讨论）</p>
         </div>
 
