--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@
         <div class="related-articles-section">
             <h2>不止是孤例：我们时代的共同困境</h2>
             <div class="related-article-item">
-                <h3>官民对立：为何抗议在中国多地频发？</h3>
-                <p class="summary">“经济衰退与地方政府的权力滥用，正让越来越多的人走上街头。从烂尾楼业主到被拖欠工资的工人，当司法无法提供公正，抗议便成为最后的表达方式。这不仅是个别官员的问题，更是系统性失灵的警示。”</p>
-                <a href="https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%85%AC%E6%B0%91%E8%AE%BA%E5%9D%9B/20250926-%E6%BB%95%E5%BD%AA-%E4%B8%AD%E5%9B%BD%E5%A4%84%E5%9C%A8%E6%8A%97%E8%AE%AE%E5%A4%9A%E5%8F%91%E6%9C%9F%EF%BC%8C%E8%B5%B0%E5%90%91-%E5%92%8C%E8%B0%90%E7%A4%BE%E4%BC%9A-%E7%9A%84%E5%8F%8D%E9%9D%A2" target="_blank" rel="noopener noreferrer" class="read-more-btn">阅读RFI深度报道 &raquo;</a>
+                <h3>官民对立：为何维权在中国这么难？</h3>
+                <p class="summary">“经济衰退与地方政府的权力滥用，正让越来越多的人走上街头。从烂尾楼业主到被拖欠工资的工人，当司法无法提供公正，维权抗议便成为最后的表达方式。这不仅是个别官员的问题，更是系统性失灵的警示。”</p>
+                <a href="https://zhuanlan.zhihu.com/p/614165654" target="_blank" rel="noopener noreferrer" class="read-more-btn">阅读知乎网站血泪史 &raquo;</a>
             </div>
             <div class="related-article-item">
                 <h3>经济困境：人人自危的“紧缩”时代</h3>
                 <p class="summary">“房地产泡沫的破裂和对未来的不确定性，让普通人捂紧了钱包。当赖以生存的资产大幅缩水，当中产阶级的梦想被现实击碎，整个社会便陷入了信心危机。您的遭遇，正是这场危机下无数家庭的缩影。”</p>
-                <a href="https://www.bbc.com/zhongwen/articles/cjw712wqg8jo/simp" target="_blank" rel="noopener noreferrer" class="read-more-btn">阅读BBC深度报道 &raquo;</a>
+                <a href="https://www.cctv.com/" target="_blank" rel="noopener noreferrer" class="read-more-btn">阅读CCTV深度报道 &raquo;</a>
             </div>
         </div>
 
