--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
         </div>
 
         <div class="share-section">
+             <h2>！！！本站创建于：2024年11月11日，旨在记录一段中国维权历程！！！</h2>
             <h2>我维权20多年，已看尽广州政府嘴脸，<br>维权过程中的各种打击报复，家庭因此分裂。<br>今天，我准备拿起舆论武器，揭露真相！！！</h2>
             <p>宪法赋予我们言论自由，业主的苦必须让全国知道！请立即转发！</p>
             <p>也欢迎全国的各类维权奇葩事情在本页末尾评论留言</p>
@@ -314,7 +315,7 @@
         
         <div class="content-block">
             <h2>判决书关键内容（2024）粤0106民初28919号</h2>
-            <p><strong>当事人</strong>：原告刘洪军；被告某建筑公司及相关个人。</p>
+            <p><strong>当事人</strong>：原告刘某某；被告某建筑公司及相关个人。</p>
             <p><strong>案由</strong>：2023年5月，被告公司在棠德花苑加装电梯时，擅自挪动原告空调外机，致水泥渣堵塞、铜管损坏，无法制冷。期间找过街道、居委、12345及两次报警均无法处理。原告诉请：赔偿更换空调、拆机费、检测费、清洗费等及诉讼费由被告承担。</p>
             <p><strong>法院认定</strong>：被告公司侵权（未经同意搬空调、未妥善处理），其他被告无证据参与侵权。</p>
             <p><strong>判决结果</strong>：2025年9月23日，判被告公司赔511元（拆机200元(未拆机无发票)、检测100元、快递11元、清洗200元(未清洗无发票)）。驳回：空调更换费（无发票+未更换）、道歉。诉讼费113元全部由原告承担。</p>
