--- a/index.html
+++ b/index.html
@@ -353,6 +353,18 @@
                 <p class="summary">“房地产泡沫的破裂和对未来的不确定性，让普通人捂紧了钱包。当赖以生存的资产大幅缩水，当中产阶级的梦想被现实击碎，整个社会便陷入了信心危机。您的遭遇，正是这场危机下无数家庭的缩影。”</p>
                 <a href="https://www.cctv.com/" target="_blank" rel="noopener noreferrer" class="read-more-btn">阅读CCTV深度报道 &raquo;</a>
             </div>
+           <div class="related-article-item">
+                <h3>维稳期禁止信访</h3>
+                <p class="summary">“在这个日子里面，禁止你进行线上信访活动，只准喜庆不许添乱。”</p>
+                <img src="fuck.png" alt="荒唐事件">
+          </div>
+            <div class="related-article-item">
+                <h3>火上浇油：K字签证</h3>
+                <p class="summary">“2025年10月，中国在国内青年失业率高达18.9%的严峻背景下，正式推出旨在吸引外国青年科技人才的“K字签证”。此举引发了强烈的舆论反弹，民众普遍批评政策“崇洋媚外”，认为在国内毕业生连外卖行业都竞争激烈的情况下，引进外国人才无疑是“火上浇油”，将进一步挤压本国青年的就业空间。
+
+网络上的反对声浪从最初对就业竞争的担忧，迅速升级为对制度不公和最高领导层决策的尖锐批评。B站、微博等平台充满了抗议和抵制，甚至有网民呼吁采取街头游行等更激烈的维权行动。舆论普遍担忧，该政策将使本已紧张的就业市场雪上加霜，激化社会矛盾，可能在未来引发更多、更广泛的社会维权事件。”</p>
+              
+            </div>             
         </div>
 
         <div class="content-block">
