--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             </div>
            <div class="related-article-item">
                 <h3>维稳期禁止信访</h3>
-                <p class="summary">“在这个日子里面，禁止你进行线上信访活动，只准喜庆不许添乱。”</p>
+                <p class="summary">“在这个日子里面，禁止你进行线上信访活动，只准喜庆不许叫苦！”</p>
                 <img src="fuck.png" alt="荒唐事件" style="max-width: 100%; height: auto;">
           </div>
             <div class="related-article-item">
