--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
     <main class="container">
-        <h1>！！！这是敏感网站，敏感，敏感，敏感！！！</h1>
+        <h1>敏感网站，敏感，敏感，敏感！！！</h1>
         <h1>现代版葫芦僧断案？荒唐、无耻、奇葩！<br>广州天河法院判决离谱至极？<br>棠德花苑以及全国的业主们都维权无门！！！</h1>
         
         <div class="visitor-counter">
