--- a/index.html
+++ b/index.html
@@ -317,12 +317,11 @@
         <div class="content-block">
             <h2>判决书关键内容（2024）粤0106民初28919号</h2>
             <p><strong>当事人</strong>：原告刘某某；被告某建筑公司及相关个人。</p>
-            <p><strong>案由</strong>：2023年5月，被告公司在棠德花苑加装电梯时，擅自挪动原告空调外机，致水泥渣堵塞、铜管损坏，无法制冷。期间找过街道、居委、12345及两次报警均无法处理。原告诉请：赔偿更换空调、拆机费、检测费、清洗费等及诉讼费由被告承担。</p>
-            <p><strong>法院认定</strong>：被告公司侵权（未经同意搬空调、未妥善处理），其他被告无证据参与侵权。</p>
-            <p><strong>判决结果</strong>：2025年9月23日，判被告公司赔511元（拆机200元(未拆机无发票)、检测100元、快递11元、清洗200元(未清洗无发票)）。驳回：空调更换费（无发票+未更换）、道歉。诉讼费113元全部由原告承担。</p>
-            <p><strong>审理时间</strong>：立案到判决耗时15个月 (2024年6月24日 - 2025年9月23日)。</p>
+            <p><strong>案由</strong>：被告在原告小区加装电梯时，将原告空调外机损坏，三年无法使用。期间找过街道、居委、12345及两次报警均无法处理。</p>
+            <p><strong>判决结果</strong>：很奇葩！！！就差没有让原告给被告赔礼道歉了，诉讼费113元全部由原告承担。</p>
+            <p><strong>审理时间</strong>：故意拖延，立案到判决耗时15个月。</p>
             <h3>赔偿对比：逻辑何在？</h3>
-            <p>法院支持了未实际发生的拆装费200元、清洗费200元，却以“未实际更换”为由驳回了同样未实际发生的空调更换费1600元。这是典型的“赔小不赔大”，逻辑完全自相矛盾！</p>
+            <p>法院只象征性的支持拆装费200元费等，却驳回赔偿空调维修等费用1600元。这是典型的“赔小不赔大”，逻辑完全自相矛盾！</p>
         </div>
         
         <div class="content-block">
@@ -337,7 +336,7 @@
             <li><strong>法院逻辑自相矛盾，赔小不赔大？</strong><br>法院承认施工方毁了空调，赔了拆装费200元、清洗费200元（无发票也支持），却说1600元更换费“没换新不算损失”。同样没实际发生，为啥拆装清洗赔，空调不赔？这种荒唐逻辑居然发生在广州天河法院？</li>
             <li><strong>空调毁了3年不赔新机费？</strong><br>检测报告确认施工方乱来导致空调无法制冷，原告要1600元换新，法院却说“没发票+没换新不算损失”。广州3年高温（35°C+），无空调生活多苦？法院不让业主恢复正常生活？</li>
             <li><strong>胜诉了还自掏诉讼费？</strong><br>施工方侵权成立，赔了511元，但113元诉讼费全让原告出。被告惹祸，受害人倒贴钱？这是保护谁的利益？再次证明司法黑暗、奇葩、荒唐、无耻！！！！！</li>
-            <li><strong>法官微信加被告律师？</strong><br>开庭当天，法官与被告律师加微信“传证据”，原告却得用法院平台/快递。程序公平在哪？谁看了不怀疑有私下交易？</li>
+            <li><strong>法官微信加被告律师？</strong><br>开庭当天，法官与被告律师加微信“传证据”，原告却得用法院平台/快递证据。程序公平在哪？谁看了不怀疑有私下交易？</li>
             <li><strong>15个月才判，拖延加重苦难？</strong><br>法律要求6-12个月结案，这案拖了15个月！3个夏天无空调，法院自己违-法-违-规且不解释延期原因，业主的苦谁管？</li>
             <li><strong>圈梁断一半，安全隐患被无视？</strong><br>楼房11根圈梁断6根，方案无加固细节，责任全推业主。政-府推电梯，法院护施工方，业主的房安全谁保障？</li>
         </ul>
