--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
 
         <div class="share-section">
-             <h3>本站创建于：2024年11月11日，旨在记录一段中国维权历程</h3>
+             <h3>本站创建于：2025年2月，旨在记录一段中国维权历程</h3>
             <h2>本人维权20余年，已看尽广州政府嘴脸，<br>维权过程中的各种打击报复，家庭因此分裂。<br>今天，我准备拿起舆论武器，揭露真相！！！</h2>
             <p>宪法赋予我们言论自由，业主的苦必须让全国知道！请立即转发！</p>
             <p>也欢迎大家在本页末尾评论留言</p>
